# projects

./: .gitignore  LearningASPNET.sln  README.md  compose.debug.yaml  compose.yaml  package-lock.json
CMakeLearn/: CMakeLearn.cpp  CMakeLearn.h  CMakeLists.txt  flatbuffers.h
CPPConsole/: CPPConsole.cpp  CPPConsole.sln  CPPConsole.vcxproj  CPPConsole.vcxproj.filters  ComplexEmployee.cpp  ComplexEmployee.h  Employee.cpp  Employee.h  Person.cpp  Person.h
CPPConsole/Debug/: Shapes.ilk  vc142.idb
CPlusPlus/: .gitignore
GT/: GT.vcxproj
GTDLLEXE/: GTDLLEXE.cpp  GTDLLEXE.sln  GTDLLEXE.vcxproj  GTDLLEXE.vcxproj.filters
GTDLLEXE/Debug/: Peeps.exp  Peeps.ilk  Peeps.lib  vc142.idb
GTestLearn/: GTestLearn.vcxproj  TriangleTest.cpp
MVC/: 'MVC.csproj  MVC.csproj  Program.cs  Startup.cs
MVC/Controllers/: HomeController.cs
MVC/Models/: ErrorViewModel.cs
MVC/Properties/: launchSettings.json
MVC/Views/: _ViewImports.cshtml
ModernReview/: Assist.cpp  Assist.h  ModernReview.cpp  ModernReview.sln  ModernReview.vcxproj  ModernReview.vcxproj.filters
Peeps/: Peeps.vcxproj  Peeps.vcxproj.filters  Person.cpp  Person.h  SharedEnums.h
Peeps/Debug/: vc142.idb
Practice/: ASPNET.sln  Movie.db  Program.cs  Startup.cs  appsettings.json
Practice/Contexts/: MovieContext.cs
Practice/Controllers/: HelloWorldController.cs  HomeController.cs  (+1 more)
Shapes/: Circle.cpp  Circle.h  IShapeInterface.h  InputValidator.cpp  InputValidator.h  ShapeConstants.h  Shapes.vcxproj  Shapes.vcxproj.filters  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Validate.cpp  Validate.h
(+66 files in other folders)
