# CMakeList.txt : CMake project for CMakeLearn, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeLearn")

# Add source to this project's executable.
add_executable (CMakeLearn "CMakeLearn.cpp" "CMakeLearn.h" "flatbuffers.h")

# TODO: Add tests and install targets if needed.


